2002-12-11 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h, gdcmHeader.cxx:
        - historic references to glib's g_malloc and g_free (#defined)
          were definitively removed.
        - gdcm.h: cosmetic changes (part of comments moved to Doc/requirements)
      * src/gdcmElValSet.cxx:
        - GetElement(guint32, guint32) renamed to GetElementByNumber.
        - GetElValue(guint32, guint32) renamed to GetElValueByNumber.
        - GetElValue(string) renamed to GetElValueByName.
        - Added GetElementByName(string).
      * src/gdcmHeader.cxx: added
        - GetPubElValRepByNumber(guint16, guint16)
        - GetPubElValRepByName(string)
        - GetShaElValRepByNumber(guint16, guint16)
        - GetShaElValRepByName(string)
        - GetShaElValByNumber(guint16, guint16)
        - GetShaElValRepByName(string)
        - GetElValRepByNumber(guint16, guint16)
        - GetElValRepByName(string)
        - GetElValByNumber(guint16, guint16)
        - GetElValRepByName(string)
      * Doc/requirements.txt added.

2002-12-9 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Test/Makefile building now depends on the one of libgdcm.so
      * src/gdcmHeader.cxx and gdcm.h are now OB (undefined length encoded
        pixel data) aware which enables finding the address (offset) of 
        the pixel data of JPEG encoded DICOM files. This leaves only a single
        file in the testSuite whose pixel data address (offset) is unknown.
      * python/testSuite.py changed accordingly.

2002-12-6 Christophe Odet + Hugues Benoit-Cattin + Eric.Boix
      * VC++ has some strong limitations when working with the STL, as stated
        in http://support.microsoft.com/support/kb/articles/Q168/9/58.ASP :
             "Also note that some STL containers (map, set, queue, list, deque)
              cannot be exported. [...]
              Some STL classes contain nested classes. These classes can not
              be exported. [...]